[package]
name = "snaker"
version = "0.1.0"
authors = ["kfjustis <kfjustis@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
#raylib = { git = "https://github.com/deltaphc/raylib-rs", branch = "master" }

#[dependencies.raylib]
#version = "4.5.0"
#git = "https://github.com/litten2up/raylib-rs"
#branch = "4.5.0"

[dependencies]
raylib = { version = "3.7" }